Changes for 1.1.1:

 - fixed incorrect character in item key selector (Alexei)
 - fixed processing of SNMP having non-standard port (Alexei)
 - fixed database data to get rid of zero multiplier for disk spaces (Alexei)
 - misc fixes for WEB frontend (Alexei)
 - fixed srv_status.php: Cannot use object of type CLink ... (Alexei)
 - added removal of stat file on agent shutdown (Alexei)
 - added new parameter StatFile to ZABBIX config file (Alexei)
 - fixed processing of web.page.get and long data sent by agent (Alexei)
 - fixed B64 en-decoding of large data (Alexei)
 - fixed problem with undefined PACKETSZ under Mac OS/X (Alexei)
 - disabled excessive debug printing for system.run (Alexei)
 - umask(022) changed to umask(002) (Alexei)
 - added additional symbols for trigger expressions (slash, space) (Alexei)
 - fixed permissions of log files when starting as 'root' (Alexei)
 - fixed agent crash while evaluating proc.mem[] (Alexei)
 - changed type of lastlogsize to long in structure METRIC (Alexei)
 - ZABBIX agent to bind even if TIME_WAIT sockets exist (Alexei)
 - ZABBIX server to bind even if TIME_WAIT sockets exist (Alexei)
 - fixed notification report for Oracle (Eugene)
 - fixed large history of alarms displaying (Eugene)
 - fixed value mapping for latest data (Eugene)
 - fixed value mapping for screens (Eugene)

Changes for 1.1:

 - timeout for sending emails and SMS was increased to 20 seconds (Alexei)
 - fixed text history storing for Oracle (Eugene)
 - fixes in Oracle schema (Alexei)
 - fixed syntax in snmptrap.sh (Alexei)
 - fixed EventLog for Win32 ZABBIX agent, thanks to "bcheese" (Eugene)
 - developed aggrgated graphs (Eugene)
 - improved graphs, added selector of data calculation function (Eugene)
 - fixed popup of trigger selection (Eugene)

Changes for 1.1beta12:

 - added support of serial GSM modems for SMS (Alexei)
 - fixed SQL requests escaping for oracle server (Eugene)
 - support of web.page.regexp[] (Alexei)
 - support of web.page.perf[] (Alexei)